@@ -1,3 +1,6 @@
+2010-06-28  6.6.2-10 Cristy  <quetzlzacatenango@image...>
+  * Properly detect the TIFF image format endianess.
+
 2010-06-27  6.6.2-9 Cristy  <quetzlzacatenango@image...>
   * Add the ImageView API.
   * Fix DJVU coder to read one page (e.g. 'image.djvu[2]').
